@@ -103,11 +103,12 @@ $(HOST_BIN): $(HOST_OBJS)
 .built:	$(TARG_BIN) $(HOST_BIN)
 	@touch .built
 
+context:
+
 .depend: Makefile $(TARG_SRCS)
 	@$(MKDEP) $(ROOTDEPPATH) $(CC) -- $(CFLAGS) -- $(TARG_SRCS) >Make.dep
 	@touch $@
 
-# Register application
 depend: .depend
 
 clean:
